# FYP-Server

./: .gitignore  .gitmodules  README.md  ppt_control.py  requirements.txt  rosbag_QoS.yaml  setup.sh
launch/: transform.launch.py
rosbag/: metadata.json  metadata.txt
rosbag/bag/: info.txt
rosbag/rosbag2_2022_09_14-09_08_17/: metadata.yaml  rosbag2_2022_09_14-09_08_17_0.db3
src/: glove.rviz
src/analyzer/: package.xml  setup.cfg  setup.py
src/augmentor/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/commander/: package.xml  setup.cfg  setup.py
src/covariance_matrix_calculator/: README.md  package.xml  setup.cfg  setup.py
src/detector/: package.xml  setup.py
src/dtf_calculator/: package.xml  setup.cfg  setup.py
src/gesture_definition/: package.xml  setup.cfg  setup.py
src/helloworld/: package.xml
src/labeler/: README.md  package.xml  setup.cfg  setup.py
src/labeller/: CMakeLists.txt  package.xml
src/launch_master/: package.xml  setup.cfg  setup.py
src/msgs/: CMakeLists.txt  README.md  package.xml
src/mydebug/: package.xml  setup.cfg  setup.py
src/receiver/: README.md  (+3 more)
src/transform/: package.xml  setup.cfg  setup.py
src/transform/transform/: main.py
weights/: model_lstm-2023_3_30-14_35-acc1.00.h5  model_lstm-2023_3_31-15_34-acc0.99.h5  model_lstm-2023_4_15-10_9-acc1.00.h5  model_lstm-2023_4_7-9_5-acc1.00.h5  model_lstm_weights-2023_2_24-14_51-acc0.96.h5  model_lstm_weights-2023_2_25-14_38-acc0.94.h5  model_lstm_weights-2023_2_26-3_47-acc0.96.h5  model_lstm_weights-2023_2_26-3_54-acc0.98.h5  model_lstm_weights.h5
(+84 files in other folders)
